# PDF-operator

./: .gitignore  README.md  package.json  工作区格式
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: file.rs  menu.rs  mod.rs  shell.rs  system.rs  tray.rs  update.rs  window.rs
apps/desktop/src-tauri/src/utils/: mod.rs  path.rs  platform.rs  process.rs
apps/server/: .env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apps/server/app/: main.py
apps/server/app/api/: router.py
apps/server/app/api/middleware/: error_handler.py  logging.py
apps/server/app/api/v1/: ai.py  batch.py  convert.py  ocr.py  pdf.py  security.py  system.py  workflow.py
apps/server/app/config/: logging.py  settings.py
apps/server/app/core/ai_engine/: engine.py
apps/server/app/core/batch_engine/: engine.py
apps/server/app/core/convert_engine/: engine.py
apps/server/app/core/ocr_engine/: engine.py
apps/server/app/core/pdf_engine/: engine.py  merger.py  reader.py  splitter.py  writer.py
apps/server/app/core/pdf_engine/extractor/: text.py
apps/server/app/core/security_engine/: engine.py
apps/server/app/db/: database.py
apps/server/app/db/models/: models.py
apps/server/app/plugins/: base.py
apps/server/app/schemas/: __init__.py  ai.py  batch.py  common.py  convert.py  ocr.py  pdf.py  plugin.py  security.py  workflow.py
apps/server/app/services/: __init__.py  ai_service.py  batch_service.py  convert_service.py  ocr_service.py  pdf_service.py  plugin_service.py  security_service.py  workflow_service.py
apps/server/app/utils/: __init__.py  config.py  crypto.py  exceptions.py  file.py  image.py  path.py
apps/server/requirements/: base.txt  dev.txt
apps/server/scripts/: port_manager.py  start_server.py
apps/server/tests/: conftest.py  test_api.py  test_exceptions.py  test_services.py  test_utils.py
(+178 files in other folders)
