[package]
name = "pdf-master"
version = "0.1.0"
description = "PDF Master Desktop Application"
authors = ["PDF Master Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-clipboard = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
sha2 = "0.10"
open = "5"
directories = "5"
num_cpus = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
